iaac_terraform_kubernetes/security_group.tf
resource "aws_security_group" "novinano-sec-group" {
  name        = "novinano-sec-group"
  description = "WEB_SSH"
  vpc_id      = aws_vpc.novinano-vpc.id

  dynamic "ingress" {
    for_each = ["80", "443", "22"]
    content {
      from_port   = ingress.value
      to_port     = ingress.value
      protocol    = "tcp"
      cidr_blocks = ["0.0.0.0/0"]
    }
  }

  egress {
    from_port   = 0
    to_port     = 0
    protocol    = "-1"
    cidr_blocks = ["0.0.0.0/0"]
  }
}
